--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "css-loader": "^7.1.2",
     "next": "14.2.4",
+    "postcss-loader": "^8.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
