--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
     "next": "14.2.4",
