--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
+    "date-fns": "^3.6.0",
     "next": "14.2.4",
     "postcss-loader": "^8.1.1",
     "react": "^18",
